<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Kari</string>
    <string name="last_name">Groszewska</string>
    <string name="full_name">Kari Groszewska</string>

    <string name="profile_bio_text">I am a senior at Vanderbilt studying CS and Economics – I am passionate about iOS app development which inspired me to take this Android CodePath course. \n I love to travel, explore new restaurants, drink fancy coffees, and throw pottery! \n</string>

    <string name="profile_hobby_header_text">Top 3 Hobbies:</string>
    <string name="profile_hobby_first_text">🧶Knitting</string>
    <string name="profile_hobby_second_text">🧱Legos</string>
    <string name="profile_hobby_third_text">📸DSLR Photography </string>
</resources>